Archive2/b4/7f7fcb71c5925a/output
main.cpp:2:30: error: uninitialized const member '<anonymous struct>::i'
 struct {const int i;} bar = {};
                              ^
